# wordcountbot

./: .env.example  README.rst  pyproject.toml
wordcountbot/: __main__.py  config.py  countwords.py
